Fix alignments

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -80,7 +80,7 @@ h4 {
   font-size: $fs-tip;
   font-weight: bold;
   opacity: .65;
-  padding: 1.3rem 0 .3rem;
+  padding: .75rem 0 .3rem;
 }
 
 input:-webkit-autofill {
